# capitalisation_station

./: .dockerignore  .env.template  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Makefile  NablaQuote.abi.json  README.md  adev_config.yaml  coverage-report.txt  docker-compose.yaml  install.sh  pyproject.toml  run_service.sh  tbump.toml
.github/workflows/: charts.yaml  common_check.yaml  publish.yaml  release.yml
audit/: audit_pr-158-162_en.md  metrics_find_bug_demo.py
charts/: derolas-agents-0.1.0.tgz  index.yaml
charts/derolas-agents/: Chart.yaml  values.yaml
charts/derolas-agents/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/derolas-agents/templates/tests/: test-connection.yaml
docs/: adding_a_new_exchange.md  running_arbitrage_trader.md
mints/: 06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  mapping.txt
scripts/: check_dependencies.py  conflict-resolver.py  create_keys.py  dev_mode.sh  dup-dep-checker.py  generate_protocols.sh  generator.py  install.sh  pre_commit_hook.sh  pre_push_hook.sh  run_mas.sh  run_single_agent.sh  sync_from_baby_degen.sh  sync_to_baby_degen.sh  test_portfolio.py  update_protocs.fish
scripts/tmp_wip/: bridge_to_gnosis.py  deposit_to_drv.py  pool_planner.py  prod_lyra_addresses.json  swap_one_inch.py  transfer_to_subaccount.py
specs/fsms/: derolas_automator.mmd  derolas_automator.yaml  funding_rate_arbing.mmd  funding_rate_arbing.yaml  gnosis_bridging.yaml
specs/protocols/: asset_bridging.yaml  balances.yaml  bridge.yaml  cross_chain_arbtrage.yaml  markets.yaml  orders.yaml  positions.yaml  spot_asset.yaml  tickers.yaml
tim/: aea-config.yaml
tim/contracts/test/: __init__.py  contract.py  contract.yaml
