[tool.poetry]
name = "capitalisation_station"
version = "0.1.0"
description = ""
authors = ["StationsStation"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
cython = "<3.0.0"
open-aea-ledger-solana = "==1.55.0"
open-aea-ledger-cosmos = "==1.55.0"
open-aea-ledger-ethereum = "==1.55.0"
open-aea-cli-ipfs = "==1.55.0"
open-aea-test-autonomy = "==0.15.2"
open-autonomy = "==0.15.2"
autonomy-dev = {version = "0.2.73", extras = ["all"]}
ccxt = ">=3.1.43"
numpy = ">=1.26.0"
web3-ethereum-defi = {path = "third_party/forks/web3-ethereum-defi"}
lyra-v2-client = {path = "third_party/upstream/lyra_client"}
balpy = {path = "third_party/forks/balpy"}
multicaller = {path = "third_party/forks/multicaller"}
pandas = "==1.3.5"
psycopg2-binary = "==2.9.6"
sqlalchemy = "==1.4.45"

[tool.poetry.dev-dependencies]


[tool.poetry.extras]
dev = ["pre-commit", "virtualenv", "pip", "toml", "bump2version"]
doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs",
]


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools"]
