[tool.poetry]
name = "capitalisation_station"
version = "0.1.12"
description = ""
authors = ["StationsStation"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

packages = [
    { include = "packages", from = "" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
cython = "<3.0.0"
open-aea-ledger-solana = "==1.65.0"
open-aea-ledger-cosmos = "==1.65.0"
open-aea-cli-ipfs = "==1.65.0"
open-aea= "==1.65.0"
open-aea-test-autonomy = "==0.19.5"
open-autonomy = "==0.19.5"
autonomy-dev = {version = "==0.2.148", extras = ["all"]}
ccxt = ">=3.1.43"
numpy = ">=1.26.0,<2"
derive-client = {path = "third_party/upstream/lyra_client"}
pandas = "2.2.3"
psycopg2-binary = "==2.9.6"
sqlalchemy = "==1.4.45"
cytoolz = "==1.0.0"
async-timeout = "^4.0.3"
openapi-core = "==0.14.5"
open-balpy = "<1"
open-multicaller = "^0.2.0"
tomli = "^2.2.1"
apprise = "^1.9.2"
lyra-v2-action-signing = {path = "third_party/upstream/v2-action-signing-python"}
open-aea-ledger-ethereum = {path = "third_party/forks/open-aea/plugins/aea-ledger-ethereum"}
eth-account = "^0.13.5"
eth-typing = "<=5.2.0"
web3 = "<7"
derive-action-signing = "^0.0.9"
cowdao-cowpy = {path = "third_party/forks/cow-py"}

[tool.poetry.group.dev.dependencies]
tbump = "^6.11.0"

[poetry.group.dev.dependencies]


[tool.poetry.extras]
dev = ["pre-commit", "virtualenv", "pip", "toml", "bump2version"]
doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs",
]


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.poetry.scripts]
dcxt = "packages.eightballer.connections.dcxt.cli:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools"]
